tests/Fase2-Semantic/error/t13-using_another_class_method_as_a_var.ctds
class aux{
	integer y;

	bool greater_than_zero(){
		return true;
	}
}

class main {
	integer x;

	integer add(){
		x = x+1;
		return x;
	}

	void main(){
		x=0;
		aux.greater_than_zero = 3;
	}
	
}
